tests/toy/neg/001612_mutation.toylang
program a = { while a do 0; } .
